# axelar-solana-relayer

./: .env  Cargo.toml  Dockerfile  README.md
.config/: nextest.toml
.github/actions/setup-repo/: action.yaml
.github/workflows/: check.yaml  conventional-pr.yaml  deny.yaml  doc.yaml  so-libs-update.yml  test.yaml  unused-deps.yaml
crates/effective-tx-sender/src/: lib.rs
crates/gateway-gas-computation/: Cargo.toml
crates/gateway-gas-computation/src/: lib.rs
crates/rest-service/: Cargo.toml
crates/rest-service/src/: component.rs  config.rs  lib.rs
crates/rest-service/src/endpoints/: call_contract_offchain_data.rs  health.rs  mod.rs
crates/rest-service/tests/: call_contract_offchain_data.rs
crates/retrying-solana-http-sender/src/: lib.rs
crates/solana-axelar-relayer/: Cargo.toml
crates/solana-axelar-relayer/src/: main.rs  telemetry.rs
crates/solana-event-forwarder/: Cargo.toml
crates/solana-event-forwarder/src/: component.rs  config.rs  gas_cost_computation.rs  lib.rs
crates/solana-gateway-task-processor/: Cargo.toml
crates/solana-gateway-task-processor/src/: component.rs  config.rs
crates/solana-gateway-task-processor/src/component/: execution_cost_estimation.rs  message_payload.rs
crates/solana-listener/: Cargo.toml
crates/solana-listener/src/: component.rs  config.rs  lib.rs
crates/solana-listener/src/component/: log_processor.rs  signature_batch_scanner.rs  signature_realtime_scanner.rs
