[package]
name = "rest-service"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
amplifier-api.workspace = true
axum.workspace = true
eyre.workspace = true
futures.workspace = true
indoc.workspace = true
relayer-amplifier-api-integration.workspace = true
relayer-engine.workspace = true
serde.workspace = true
solana-client.workspace = true
solana-listener.workspace = true
solana-sdk.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

axelar-solana-gateway = { git = "ssh://git@github.com/eigerco/solana-axelar-internal.git", branch = "feat/gtw-large-outgoing-messages" , features = ["no-entrypoint"] }
gateway-event-stack = { git = "ssh://git@github.com/eigerco/solana-axelar-internal.git", branch = "feat/gtw-large-outgoing-messages" }

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
